  * The old prompt for windows users has been removed.
  * The cp command now defaults to the console, instead of the current node,
    for file location.
  * The drone command now defaults to the console, instead of the current node,
    for file location.
  * Renamed mosref/base to mosref/transport.
  * Merged mosref/endpoint into mosref/transport.
  + Nodes may be assigned a port, which specifies where incoming drones may
    affiliate.
  + The console now only uses a single listener port for all drones.
  + The recover command informs the console that it should expect the return
    of a disconnected drone.  NOTE: This has some severe security implications,
    since a man in the middle attack is much easier after the first
    affiliation; if the drone has been deployed to an untrusted host, or has
    been deployed via a potentially compromised transport, generate a new
    drone.

- 7/20/2006, MOSREF Drone Proxying
  * Added lib/socks-server, a partial implementation of logic required for
    implementing a SOCKS4 proxy server.
  * Added (format-socks4-response granted portno addr) to lib/socks-server
  * Added (parse-socks4-request str) -> (auth proto addr portno) to 
    lib/socks-server
  * Added the proxy command, which creates a proxy on the console that forwards
    incoming TCP connections to the current node.
  * Added lib/socks-client, an implementation of a socks4 client library.
  * Added spawn-socks4-proxy to lib/socks-server, an extensible socks4 proxy.
  * Added close support to lanes in lib/bridge; sending close to a lane will
    cause the remote lane to receive a close message and the respective xmit
    recv tags to be reclaimed.  Note that this is a "half-close", both sides
    must send 'close to completely remove themselves from the bridge.

- 7/17/2006, MOSREF Drone Bridges
  * Added (make-reserved-lane bridge) -> lane to lib/bridge; unlike make-lane,
    lanes created on one end of a bridge do not appear in the bridge-lanes 